Check Solved 239. Sliding Window Maximum - O(n) solution with deque